# veyra

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  railway.toml
apps/backend/: .env.example  Cargo.toml  Dockerfile  deny.toml
apps/backend/.cargo/: audit.toml
apps/backend/migrations/: 20260627000001_users.sql  20260627000002_vehicles.sql  20260627000003_service_records.sql  20260627000004_fuel_logs.sql  20260627000005_expenses.sql  20260627000006_reminders.sql  20260627000007_vehicle_documents.sql  20260628000001_user_preferred_language.sql
apps/backend/src/: lib.rs  main.rs
apps/backend/src/adapters/outbound/: mod.rs
apps/backend/src/application/: errors.rs  mod.rs
apps/backend/src/application/auth/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs
apps/backend/src/application/document/: create.rs  list.rs
apps/backend/src/application/expense/: create.rs  list.rs
apps/backend/src/application/fuel_log/: create.rs  list.rs
apps/backend/src/application/reminder/: create.rs  list.rs  (+1 more)
apps/backend/src/bootstrap/: config.rs  state.rs
apps/backend/src/domain/: error_code.rs  errors.rs  mod.rs
apps/backend/src/ports/: auth.rs  clock.rs  mod.rs  repositories.rs  session.rs
apps/backend/tests/: auth_test.rs  document_test.rs  envelope_test.rs  expense_test.rs  fuel_log_test.rs  reminder_test.rs  service_record_test.rs  session_store_test.rs  summary_cache_test.rs  summary_test.rs  vehicle_cache_test.rs  vehicle_test.rs
apps/backend/tests/common/: mod.rs
(+264 files in other folders)
